# icl_experiments

./: .aion_artiq_root  .devcontainer-lock.json  .devcontainer.json  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .test_durations  AGENTS.md  CLAUDE.md  HANDOVER-clock-cal-kernel-fusion.md  README.md  Test environment.ipynb  classes.dot  compile_benchmark_abc_report.html  compile_profile.prof  compile_profile_report.html  conftest.py  dataset_db.mdb-lock  device_db.py  dump.vcd  flake.nix  flake.nix.old  generate.py  goals.txt  launch_script.sh  launch_script_dev.sh  notes.md  packages.dot  poetry_env_info.bat  pyproject.toml  python-aravis.nix  readme.md  readme.rst  requirements.in  requirements.txt  result  result-bin  run_artiq.sh  (+10 more)
.claude/: settings.json  settings.local.json
.claude/hooks/: clone_vendor_repos.py
.claude/plans/: 20260506-handover-fix-test-compile-all-failures.md  20260506-plan-migrateFkImagingToAndorCameraConfig.md  20260506-plan-migrateFkImagingToAndorCameraConfig_handover.md  20260531-bug-hunt-report.md  20260612-plan-lmtDynamicRoiOperatorValidation.md  20260613-dynamic-roi-overnight-results.md  20260613-lmt-clock-underflow-red-mot-handover.md  20260619-grumpy-professor-declarative-lmt-review.md  20260626-handover-declarative-lmt-fixmes.md  HANDOVER_KERNEL_CACHING.md  diagnostics_live_test_plan.md  plan-migrateFkImagingToAndorCameraConfig.prompt.md  plan-migrateFkImagingToAndorCameraConfig_handover.md  todo.md
.claude/skills/: ndscan-artiq.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
archive/clock_spectroscopy/: clock_spectroscopy_with_lattice.py
archive/database_monitors/: monitor_ijds.py  monitor_lab_temperature.py  monitor_wand.py
archive/dipole_trap/: measure_dipole_trap_molasses.py
archived_experiments/: clock_interferometry_from_mot.py  clock_spectroscopy_from_mot.py  clock_spectroscopy_with_lattice.py  enable_1064.py  enable_698_aoms.py  measure_red_mot.py  readme.txt  red_mot_with_clock_light.py  trigger_ijd_relock.py
archived_experiments/689_spectroscopy/: 689_interferometry.py  689_spectroscopy.py  689_spectroscopy_from_xxodt.py
archived_experiments/archives_fragments/: dipole_trap_phases.py
archived_experiments/archives_mixins/: XODT_loading.py  XODT_molasses.py  clock_interferometry.py  clock_shelving.py  lmt_launch_mixins_archive.py  rigol_counter.py
backup/red_mot/: measure_689_shelving.py
dedrifter/: dedrifter_cache_interface.py  dedrifter_device_db.py  idle_kernel_dedrifter.py  read_cache_settings.py  startup_kernel.py  update_dedrifter.py
device_db_config/: __init__.py  _aliases.py  _autogenerated_device_db.py  _configuration.py  _dedrifter_autogenerated.py  _device_db.py  _device_db_dedrifter.py  _non_core_devices.py  configuration.py  devices.py
docs/: Makefile  conf.py  index.rst  make.bat
drivers/: setup.py
experiments/: dumb_dds.py  import_tester.py  tester.py
log/: artiq.log.2022-05-17  artiq.log.2022-05-23  artiq.log.2022-05-24  artiq.log.2022-05-25  artiq.log.2022-05-31  artiq.log.2022-06-01  artiq.log.2022-06-06
nix/: precommit.nix
notebooks/: test toptica driver.ipynb
qbutler/: VENDORED_FROM.txt  client.py
repository/: .claude  689_spectroscopy.py  __init__.py  amplitude_loop.py  blink.py  display_injection_monitors.py  display_suservo_monitor.py  make_dataset.py  make_images.py  measure_689_shelving.py  measure_blue_mot.py  measure_magnetic_trap.py  measure_mot.py  measure_mot_loading_curve.py  measure_red_mot.py  monitor_covid.py  monitor_ion_pump.py  monitor_lab_temperature.py  monitor_weather.py  notes-from-charles.txt  relock_ijd.py  rtio.py  scan_koheron_current.py  set_dds.py  set_dds_alt.py  set_suservo_static.py  slice_red_mot.py  stub_experiment.py  test_21jul.py  test_ndscan.py  tester.py  urukul.py
repository.bak/: __init__.py
scripts/: backup_database.sh  backup_datasets.sh  backup_grafana.sh  generate_stubs.py  gitlab_ssh_rewrite.sh  icl_aion_gui_config.pyon  icl_aion_server_config.pyon  launch_database.sh  launch_dedrifter.sh  launch_grafana.sh  launch_script.sh  pytest_vendored.py  refresh_stubs.sh  stub_branches.py  watch_master.sh  wsl_display_fix.sh
tests/: beam_reset.py  broadcast_large_dataset.py  conftest.py  fixtures.py  hello_experiment.py  mock_controller.py  mock_device.py  painted_pulse.py  shaped_pulse_frag.py  test_all_constants_used.py  test_aravis_works.py  test_archive_only_channel.py  test_ballistic_predictor.py  test_basics.py  test_beam_setter_defaults.py  test_beam_setter_toggler.py  test_bg_corrected_roi_targets.py  test_calibration_kernels.py  test_callable_passing_compilation_mwe.py  test_callback_flatten.py  test_checkpoints.py  test_clock_calibrations.py  test_clock_opll_pulse_tracking.py  test_clock_ratio_calibration.py  test_compile_all.py  test_current_setter.py  test_dataset_fit_analysis.py  test_declarative_dual_interferometer.py  test_declarative_interferometers.py  test_declarative_interferometers_build.py  test_default_beam_setter.py  test_default_beam_setter_with_urukul.py  test_default_scan_template.py  test_default_setter_example_from_icl.py  test_drivers.py  test_dynamic_roi_config.py  test_dynamic_roi_single_image_layout.py  test_empty_arrays.py  test_fast_int_checksum.py  test_fixtures.py  (+46 more)
windows_support/: README.txt  init_environment.bat  requirements.txt  run_dashboard.bat  run_wand.bat
(+672 files in other folders)
