[tool.poetry]
name = "xyz-experiments"
version = "0.1.0"
description = ""
authors = ["Charles Baynham <c.baynham@imperial.ac.uk>"]
readme = "readme.rst"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyaion = {git = "https://gitlab.com/aion-physics/code/artiq/pyaion.git", rev = "poetry"}
artiq-http = {git = "https://gitlab.com/aion-physics/code/artiq/drivers/artiq_http.git"}
koheron-ctl200-laser-driver = {git = "https://gitlab.com/aion-physics/code/artiq/drivers/koheron_ctl200_laser_driver.git"}
qbutler = {git = "https://gitlab.com/aion-physics/code/artiq/qbutler.git"}
wand = {git = "https://gitlab.com/aion-physics/code/artiq/forks/wand.git", rev = "adapt_for_linux"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "tests"
pythonpath = "."
