[tool.poetry]
name = "xyz-experiments"
version = "0.1.0"
description = ""
authors = ["Charles Baynham <c.baynham@imperial.ac.uk>"]
readme = "readme.rst"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyaion = {git = "https://gitlab.com/aion-physics/code/artiq/pyaion.git"}
artiq-http = {git = "https://gitlab.com/aion-physics/code/artiq/drivers/artiq_http.git"}
koheron-ctl200-laser-driver = {git = "https://gitlab.com/aion-physics/code/artiq/drivers/koheron_ctl200_laser_driver.git"}
qbutler = {git = "https://gitlab.com/aion-physics/code/artiq/qbutler.git"}
wand = {git = "https://gitlab.com/aion-physics/code/artiq/forks/wand.git", rev = "adapt_for_linux"}

# We build python-aravis in the flake and override it into nixpkgs, so just tell
# poetry that it's required but not where to get it from. This is an annoying
# solution because poetry cannot update its lock file anymore! This entry is
# here to get poetry2nix to install the package from (patched) nixpkgs, but raw
# poetry cannot access it and therefore fails. To update dependencies, you must
# therefore comment out this line, update deps, then put it back. Definitely:
# FIXME python-aravis needs patching in better
python-aravis = { version = "*" }

pydantic = "^2.4.2"
uk-covid19 = "^1.2.2"
retry = "^0.9.2"
toptica-lasersdk = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"
black = "^23.9.1"
coverage = "^7.3.2"
ipython = "^8.16.1"
notebook = "^7.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "tests"
pythonpath = "."
