[tool.poetry]
name = "icl-experiments"
version = "0.1.0"
description = ""
authors = ["Charles Baynham <c.baynham@imperial.ac.uk>"]
readme = "readme.rst"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

pyaion = { git = "https://gitlab.com/aion-physics/code/artiq/pyaion.git", branch = "feature/cache-set-beams-to-default" }

# Specify sipyco even though it's already in pyaion, since we want a specific
# version here. It would be nice if we could specify versions and get it from
# PyPI, but this still hasn't been added
sipyco = { git = "https://github.com/m-labs/sipyco.git" }

artiq-http = { git = "https://gitlab.com/aion-physics/code/artiq/drivers/artiq_http.git" }
koheron-ctl200-laser-driver = { git = "https://gitlab.com/aion-physics/code/artiq/drivers/koheron_ctl200_laser_driver.git" }
qbutler = { git = "https://gitlab.com/aion-physics/code/artiq/qbutler.git" }
wand = { git = "https://gitlab.com/aion-physics/code/artiq/forks/wand.git", rev = "charles_left" }
toptica-wrapper = { git = "https://gitlab.com/aion-physics/code/artiq/drivers/topticadlcpro.git" }
gaio-laser-driver = { git = "https://gitlab.com/imperial-sr/electronics/general-adc-dac-board/wand-ecdl-controller.git" }
relocker-driver = { git = "https://gitlab.com/imperial-sr/programming/relocker-board-driver.git" }
andor-artiq-ndsp = { git = "https://gitlab.com/aion-physics/code/artiq/drivers/andor_windows_ndsp.git" }
imperial-artiq-applets = { git = "https://gitlab.com/imperial-sr/programming/imperial-artiq-applets.git", branch = "feature/roi-from-dataset" }

# As with artiq, aravis needs some nix packaging too. For now, this is in this
# repo - see python-aravis.nix and its use in flake.nix
aravis = { git = "https://gitlab.com/aion-physics/code/artiq/forks/python-aravis.git" }

# The pin is to avoid bugs from strict checks in "PyO3" See e.g.
# https://github.com/sphinx-doc/sphinx/issues/11662
# https://github.com/pydantic/pydantic/issues/6584.
# Such a dramatic pin is probably not required, but it'll fix it and we don't
# use pydantic much
pydantic = "1.10.2"

uk-covid19 = "^1.2.2"
retry = "^0.9.2"
toptica-lasersdk = "^3.1.1"
tenma-power-supply = "^1.2.3"
tti-power-supply = "^1.0.2"
matplotlib = "^3.8.2"
rsinstrument = "^1.82.1"
python-vxi11 = "^0"
generic-scpi-driver = "^1.6.1"
aiohttp = "^3.13.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-xdist = "^3.5.0"
pytest-split = "^0.9.0"
black = "24.8.0"
coverage = "^7.3.2"
ipython = "^8.16.1"
notebook = "^7.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "tests"
pythonpath = "."
